SystemRescue ChangeLog
======================

-------------------------------------------------------------------------------
9.02 (YYYY-MM-DD):
-------------------------------------------------------------------------------
* Fix the type of the default definition of parameter "ar_attempts" (#266)
* Added scripts and documentation to help build the ISO image in a docker container
* Reduce compression ratio for initramfs on i686 to prevent a crash at build time (#261)

-------------------------------------------------------------------------------
9.01 (2022-02-10):
-------------------------------------------------------------------------------
* Updated the kernel to the Long-Term-Supported linux-5.15.22
* Support for adding Certification Authorities (CAs) via YAML config (Gerd v. Egidy)
* Uncompress kernel modules so the squashfs compression provides a better ratio (#247)
* Optimized the initramfs compression to reduce the size of the ISO (Gerd v. Egidy)
* Added development build option: faster build times but lower compression (Gerd v. Egidy)
* Remove Q-Logic Fibrechannel/Infiniband HBA firmware to save space (#256)
* Implemented a script to determine the effective configuration from yaml files (#251)
* Added boot option 'sysrescuecfg' to control how the configuration is loaded (#254)
* Added support for loading remote yaml configuration files over http/https (#254)
* Allow all kinds of scripts to be used for autorun, not just /bin/sh (Gerd v. Egidy)

-------------------------------------------------------------------------------
9.00 (2022-01-16):
-------------------------------------------------------------------------------
* Updated the kernel to the Long-Term-Supported linux-5.15.14
* The new kernel brings the ntfs3 module which provides better NTFS support
* The system comes with a copy of the website as an offline manual (Gerd v. Egidy)
* Added sysrescue-customize script to create custom ISO images (Gerd v. Egidy)